<resources>
    <string name="app_name">ToDo List</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="todo_list">Todo List</string>
    <string name="new_todo">New Todo</string>
    <string name="calendar">Calendar</string>
    <string name="date">Date</string>
    <string name="pick_time">Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">ToDo List</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>