<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="15dp"
        android:text="@string/date" />


    <Button
        android:id="@+id/btnTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="15dp"
        android:text="@string/pick_time" />


    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="15dp"
        />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="364dp"
        android:layout_height="51dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#FFFFFF"
        app:icon="@android:drawable/ic_menu_add"
        app:iconTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="366dp"
        android:layout_height="46dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137"
        tools:ignore="Autofill" />

</RelativeLayout>