<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".views.CreateTodoView">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/todoCheckBox"
                android:layout_width="31dp"
                android:layout_height="34dp"
                android:textAlignment="viewStart" />

            <LinearLayout
                android:layout_width="255dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/todoDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/todoTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pick_time" />

                <TextView
                    android:id="@+id/todoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/todoDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/description"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:textAlignment="center"
                    android:textSize="8sp"
                    app:icon="@android:drawable/ic_menu_edit"
                    app:iconPadding="0dp"
                    app:iconTint="#F60202"
                    tools:ignore="SmallSp,SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:textAlignment="center"
                    android:textSize="8sp"
                    app:icon="@android:drawable/ic_menu_delete"
                    app:iconPadding="0dp"
                    app:iconTint="#F60202"
                    tools:ignore="SmallSp,SpeakableTextPresentCheck" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</FrameLayout>